# FileOrganizer_v0.0.1

./: BASIC_IMPLEMENTATION.md  MVP.md  README.md  SECURITY_ANALYSIS.md  main.py  mvp.md  pyproject.toml  requirements.txt  unorganize.py
AoDocs/AnalysisDocuments/: REQUIREMENTS_COMPLIANCE_ANALYSIS.md
FO_Docs/AnalysisDocuments/: FUNCTION_REFERENCE.md  SECURITY_ANALYSIS.md  UNORGANIZE_IMPLEMENTATION.md
FileOrganizer Unlisted Documents/AnalysisDocuments/: ARCHITECTURE_ANALYSIS.md
src/: gui.py  main.py
src/core/: config_interface.py  events.py  protocols.py  validation_manager.py
src/file_operations/: __init__.py  file_info.py  file_service.py  file_types.py  file_utils.py
src/gui/: main_window.py  privacy_dialog.py
src/models/: operation_result.py
src/organizers/: __init__.py  base_organizer.py  date_organizer.py  smart_organizer.py  type_organizer.py
src/services/: file_service.py  organization_service.py
src/services/config/: __init__.py  config_service.py  privacy_logger.py
src/services/core/: __init__.py  organization_service.py  unorganize_service.py  validation_service.py
src/services/metadata/: __init__.py  document_service.py  exif_service.py  media_service.py  metadata_service.py
src/services/platform/: __init__.py  platform_service.py
